更新学习入门方式

--- a/source/_posts/N001_什么是前端.md
+++ b/source/_posts/N001_什么是前端.md
@@ -73,6 +73,20 @@ tags:
 
 ![推荐](https://sltrust.github.io/note/img/note001_5.png)
 
+#### 如果是 HTML
+
+你就搜MDN
+
+#### 如果是 CSS
+
+你就 CSS Tricks
+
+#### 如果是 JS
+
+你就 MDN 或者 阮一峰的js教程 如果买书只推荐高程，如果你这本都看不完，买其他的也没用。
+
 ![推荐](https://sltrust.github.io/note/img/note001_6.png)
+
+
 
 > MDN全称是Mozilla Developer Network
