新增ES6速学和命令行相关文章的修改

--- a/source/_posts/N004_0_命令行基础.md
+++ b/source/_posts/N004_0_命令行基础.md
@@ -57,15 +57,16 @@ pwd    //输出当前路径 ==>  /c/Users/hjx
 
 背下来了吗？每个单词都很短，应该不难背。好的，你基本已经学会命令行了。接下来我们学习这些单词的缩写
 
-缩写
+### 缩写
+命令  |全写|缩写
+----------|---------|------
+创建目录|make directory|mkdir
+删除|remove|rm
+移动 / 重命名|move|mv
+复制	|copy|cp
+罗列	|list|ls
+改变目录|change directory|cd
 
-- 命令	全写	缩写
-- 创建目录	make directory	mkdir
-- 删除	remove	rm
-- 移动 / 重命名	move	mv
-- 复制	copy	cp
-- 罗列	list	ls
-- 改变目录	change directory	cd
 
 缩写规则就是：删掉元音字幕（A E I O U），保留前 2 到 3 个辅音字母
 
@@ -121,4 +122,62 @@ pwd    //输出当前路径 ==>  /c/Users/hjx
 如何学习我目前还没有掌握的命令？
 
 Google: Linux 查看文件内容
+
+### 快捷键
+- ↑↓ 上一命令 / 下一命令
+- !! 上一命令占位符
+- Tab 自动补全路径
+- Alt+. 上一命令的最后一个参数
+- && 前面的执行成功了，再执行后面的
+- || 前面的执行失败了，就执行后面的
+- ; 前面执行完了，不管成功失败，就执行后面的
+- ">" 重定向
+- | 管道
+### 命令行技巧
+~/.bashrc 文件的功能很强大。
+
+### 自动运行
+1.首先 touch ~/.bashrc 创建一下这个文件
+2.start ~/.bashrc 选用编辑器编辑这个文件，内容为 echo 'Hi'
+3.你也可以用命令行编辑文件 echo "echo 'hi'" >> ~/.bashrc
+4.关闭退出 Git Bash，然后打开 Git Bash，是不是看到了 Hi，这说明每次进入 Git Bash，就会优先运行 ~/.bashrc 里面的命令
+5.重新编辑 ~/.bashrc，内容改为 cd ~/Desktop，重启 Git Bash，有没有发现默认就进入桌面目录了？
+你可以用 ~/.bashrc 在进入 Git Bash 前执行任何命令，十分方便。
+
+### alias
+1.在 ~/.bashrc 里新增一行 alias f="echo 'frank is awesome'"，等于号两边不能有空格，你最好一个字都不要错。
+2.运行 source ~/.bashrc，作用是执行 ~/.bashrc
+3.运行 f，就会看到 frank is awesome
+4.也就是说，现在 f 就是 echo 'frank is awesome' 的缩写了，利用这个技巧，我们可以把很多常见的命令缩写一下，比如
+``` 
+ alias la='ls -a'
+ alias ll='ls -l'
+ alias gst='git status -sb'
+ alias ga='git add'
+ alias ga.='git add .'
+ alias gc='git commit'
+ alias gc.='git commit .'
+```
+保存退出，然后运行 source ~/.bashrc
+这样一来，你的 Git 操作就会简单很多：
+ ```
+ ga 1.txt
+ ga .
+ gc 1.txt
+ gc.
+ gst
+```
+接下来说两个目前用不到的技巧。
+
+### 环境变量
+还可以在 ~/.bashrc 里面设置一些环境变量，比如你可以在 ~/.bashrc 里面添加一行
+
+export SASS_BINARY_SITE="https://npm.taobao.org/mirrors/node-sass"
+那么以后你安装 node-sass 的时候就不会因为被墙而报错了。以后会用到的，现在先说一下。
+
+### 设置 PATH
+export PATH="目录的绝对路径:$PATH"
+可以在 PATH 里添加一个目录，不要运行，等用到的时候再来查。
+
+
 
