--- a/source/_posts/ES6_005_ES6_面向对象.md
+++ b/source/_posts/ES6_005_ES6_面向对象.md
@@ -1,16 +1,19 @@
 ---
-title: 面向对象
+title: ES6_面向对象(五)
 date: 2017-03-14 15:42:37
 tags: ES6速学
 ---
 
 ### ES6之前的面向对象使用函数模拟的 并非真正意义上的面向对象
+
 >  始终坚信一句话  系统提供的API永远是最好的
+
 ---------------------------------------------------------------------------------
 > 以前的面向对象  
 各种恶心复杂版本的实现我就不说了 
 我猜你肯定要问？（好奇害死猫）
 自己看高三第六章
+
 ```
 function Person(name,age){
     this.name=name;
@@ -36,8 +39,11 @@ var w1=new Worker('bbb',10,'上学');
 //alert(p1.showName());
 alert(w1.showName());
 ```
+
 ### 真正意义上的面向对象
+
 > 简易版
+
 ```
 class Person{
     constructor(name,age){  //构造函数
@@ -52,7 +58,9 @@ class Person{
 var p1=new Person('bbb',40);
 alert(p1.showName());
 ```
+
 > 继承
+
 ```
 class Person{
     constructor(name,age){  //构造函数
