添加知识点

--- a/source/_posts/N004_1_git入门.md
+++ b/source/_posts/N004_1_git入门.md
@@ -81,6 +81,15 @@ git commit -m '提交信息'
 git pull 相信我 你一定会忘记这个
 git push 
 ```
+### 如果你已经commit了 但是发现这次改的需要跟上次commit合并
+
+```
+# 修复之前的commit,和本次修改一并提交
+git commit --amend -v .
+# 上传到远程仓库
+git push
+```
+
 ### 其他 中级命令
 ```
 git remote add origin git@github.com:xxxxxxx.git 将本地仓库与远程仓库关联
