勘误错别字

--- a/source/_posts/N001_什么是前端.md
+++ b/source/_posts/N001_什么是前端.md
@@ -99,3 +99,19 @@ tags:
 4. 经验：（有一个工厂机器出了毛病，新来的工人都搞不定，然后就找老师傅来，老师傅来了看了一眼运作效果就说把某一个地方螺丝拧一下就好了，他为社么知道呢？他自己都不知道为什么知道，因为平时被坑多了，以至于看到有问题就知道为什么错了。人机合一，我们是人码合一）
 
 我们要做什么平时要总结，这就是经验。
+
+#### 滚雪球原理
+
+> fake it until you make it 
+
+如果你想变成一个很厉害的人就一直假装你是一个很厉害的人
+
+比如你看学霸平时都是在看书就连听歌都是为了学英语，那就以他的行为要求自己。
+
+> 学习的过程看一遍是不够的,做一遍也是不够的
+
+你至少看两遍
+
+> 你说看一遍高程就全会了的可能性？
+
+
