--- a/source/_posts/N002_计算机是如何存数据的.md
+++ b/source/_posts/N002_计算机是如何存数据的.md
@@ -52,10 +52,35 @@ Unicode 将全球所有字符编号
 a  > 00000000 00000000 00000000 01100001 = 0061
 你 > 00000000 00000000 01001111 01100000 = 4F60
 
-> 高性价比 UTF-7
+> 高性价比 UTF-8
 
 a > 01100001
 你 > 11100100 10111101 10100000
+
+> ### utf-8的原理
+
+1. if 你表示的数字小于七位
+
+    ```
+    0XXX XXXX
+    ```
+    
+2. else if 你的数字大于七位加4位 也就是11位,前面110代表占用两字节的空间
+    ```
+    110XXXXX 10XXXXXX
+    ```
+3. else if 表示两个字节，前面1110代表占用三字节的空间
+    ```
+    1110XXXX 10XXXXXX 10XXXXXX  所有X位加一起16位 两个字节就可以表示所有的汉字
+    ```
+4. else 11110代表占用四个字节的空间
+    ```
+    11110XXX 10XXXXXX 10XXXXXX 10XXXXXX 
+    ```
+
+规律就是你由几个字节组成 最左面的冗余信息就是用来表示你占用几个字节
+
+你实际占用两个字节就是11,三个字节就是111 四个字节就是1111
 
 ### UTF-8是一种编码方式，不是字符集
 
@@ -65,7 +90,7 @@ a > 01100001
 - 1993年 GB13000  unicode 1.1
 - 1993 -1999 GBK
 - 1995年 js诞生的时候 unicode3还没有出来
-- 1999年 Unicode3 
+- 1999年 Unicode3.0 
 - 2000年 GB18030 兼容GBK并扩展
 
 现在开发网站一定要使用UTF-8
@@ -74,7 +99,7 @@ a > 01100001
 
 JS使用了Unicode字符集，但是没有使用UTF-8
 
-> JS用的UCS-2编码
+> JS用的UCS-2编码(已经没人使用的编码)最多表示2个字节的汉字
 > 因为1995年UTF-16还没有发明，JS也不想使用UTF-32
 
 ```
