错别字勘误。。。。

--- a/source/_posts/MJ_001_01前端面经.md
+++ b/source/_posts/MJ_001_01前端面经.md
@@ -6,9 +6,9 @@ tags: web面经
 
 > ### 由于公司宣布倒闭
 
-所以不得不开始找工作，下面开始每场的面试经验分享，自我介绍掠过。
+所以不得不开始找工作，下面开始每场的面试经验分享，自我介绍略过。
 
-面试是可以从中来感受企业的文化。有的令人怒不可遏，有的让人感受到礼仪。如果你被面的怒不可遏我建立直接走人。这样的公司就算你去了，你也迟早被同化。
+面试是可以从中来感受企业的文化。有的令人怒不可遏，有的让人感受到礼仪。如果你被面的怒不可遏我建议直接走人。这样的公司就算你去了，你也迟早被同化。
 
 ### 注：如果写的有问题，请及时发邮件怼我trustfor@sina.cn
 
