python全栈知识点总结

--- a/source/_posts/N020_JS里的数据.md
+++ b/source/_posts/N020_JS里的数据.md
@@ -5,6 +5,12 @@ tags: 前端知识点
 ---
 
 ### JS如何学习
+
+#### JS作者的评价
+
+- 原创之处并不优秀
+- 优秀之处并非原创
+
 > 从简单到复杂
 ![示意图](https://sltrust.github.io/note/img/note020_1.png)
 ![示意图](https://sltrust.github.io/note/img/note020_2.png)
