知识点总结

--- a/source/_posts/Py002-01-03文件操作.md
+++ b/source/_posts/Py002-01-03文件操作.md
@@ -1,7 +1,7 @@
 ---
 title: Py002_01_03文件操作
 date: 2018-08-15 13:26:16
-tags: 
+tags:  M02
 ---
 
 ### python文件处理
@@ -237,4 +237,40 @@ f.flush() # 此时文件是空的
 f = open('info.txt','r',encoding='utf-8')
 f.truncate(6) 
 f.flush() # 此时文件是  '路飞' 代表从头开始截取6个字节
+```
+
+### 文件修改
+
+实际是不能直接像word那样修改文件内容的，因为word是把所有内容读到内存里。
+
+用光标也不靠谱：因为  比如seek的时候  张三 变成 哈尔滨 这样张三后面的内容不会让出位置，而是覆盖。
+
+> 变通方式
+
+- 写道磁盘上
+- 写道内存里
+
+```
+import os
+
+f_name = "info.txt"
+f_new_name = "%s.new"%f_name
+
+old_str = '张三'
+new_str = '哈尔滨'
+
+f = open(f_name,"r",encoding='utf-8')
+f_new = open(f_new_name,"w",encoding='utf-8')
+
+for line in f:
+    if old_str in line:
+        line = line.replace(old_str,new_str)
+
+    f_new.write(line)
+
+f.close()
+f_new.close()
+
+os.rename(f_new_name,f_name)
+
 ```
