面向对象和包知识点修改

--- a/source/_posts/Py002-02-01模块和包.md
+++ b/source/_posts/Py002-02-01模块和包.md
@@ -100,7 +100,7 @@ pip3 install -i http://pypi.douban.com/simple/ 模块名 --trusted-host pypi.dou
 - 第一步
 
 ```
--|my_pro
+-|my_pro  根路径
 ---|mod1
 ------|a.py
 ------|b.py
@@ -143,22 +143,43 @@ a.sayHi()
 在 python3 中加不加都一样(默认帮你优化了)
 ```
 
-- 模块间相互使用
+- 模块间相互使用嵌套特别多的时候
 
 ```
-# a中使用 b.py的功能 和 包mod2下的d.py
-from . import b 
-from ..mod2 import d
+|——root
+|——|——t1
+|——|——|——__init__.py
+|——|——|——aaa.py
+|——|——|——t3
+|——|——|——|——__init__.py
+|——|——|——|——ccc.py
+|——|——t2
+|——|——|——__init__.py
+|——|——|——bbb.py
+|——|——|——t4
+|——|——|——|——__init__.py
+|——|——|——|——ddd.py
+```
 
-# . 代表当前目录
-# .. 代表上一层目录
+这样的目录结构需要把 root路径引入
+
+```
+如在 t1包下的 aaa为入口时就要 将根目录root加入到sys.path中 这样该目录下的所有包之间都可以引用了
+import os ,sys
+# os.path.dirname() 获取当前路径的目录名
+# print(os.path.abspath(__file__)) # 获取当前目录绝对路径
+
+# 获取根路径
+baseDir = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
+# 添加到sys.path 这个里面是个列表  就是调用方法或模块的查找路径
+sys.path.append(baseDir)
 ```
 
 > 结论：
 
 ```
 1. 文件夹中必须有 __init__.py 文件，该文件可以为空，但必须存在
-2. 不能作为顶层模块来执行该文件中的py文件(即不能作为主函数的入口：根目录)
+2. 在任意一个py文件里 往sys.path里添加 项目的根路径就可以任意的使用模块了
 ```
 
 
