面向对象 继承知识点

--- a/source/_posts/Py003-01-01面向对象.md
+++ b/source/_posts/Py003-01-01面向对象.md
@@ -221,4 +221,55 @@ print(stu1.y) # 从Student找  'from Student class'
 # 如果Student也没有  报错 
 ```
 
+#### 练习
+
+```
+'''
+编写学生类，产生一堆学生对象
+要求：
+有一个计数器(属性)，统计共实例了多少个对象
+'''
+class Student:
+    school = 'xx大学'
+    count = 0
+    def __init__(self,name,sex,age):
+        self.Name = name
+        self.Sex = sex
+        self.Age = age
+        Student.count+=1
+
+    def learn(self):
+        print('%sis learning'%self.Name)
+
+
+s1 = Student('a1','nan',11)
+s2 = Student('a2','nan',11)
+s3 = Student('a3','nan',11)
+print(Student.count)
+```
+
+```
+'''
+模拟王者荣耀定义两个英雄
+要求：
+英雄要有攻击力，生命，名字
+实例化两个英雄对象
+英雄之间可以互相殴打，被殴打一方掉血，血量少于0则判断死亡
+'''
+
+class Hero:
+    def __init__(self,name,life_value,aggresivity):
+        self.name = name
+        self.life_value = life_value
+        self.aggresivity = aggresivity
+
+    def attack(self,enemy):
+        enemy.life_value -= self.aggresivity
+
+a = Hero('亚瑟',100,50)
+b = Hero('小乔',100,60)
+
+a.attack(b)
+```
+
 
