继承实现原理

--- a/source/_posts/Py003-01-02继承.md
+++ b/source/_posts/Py003-01-02继承.md
@@ -147,4 +147,97 @@ class Sevn(Hexo):
 - 多个父类会根据它们在列表中的顺序被检查
 - 如果对下一个类存在两个合法的选择,选择第一个父类
 
+```
+class Foo(a1,a2,a3,a4....an):
+    pass
+```
+
+- 仅在python2中有 新式类和经典类 
+- python3中没有经典类  统一新式类
+
+什么是新式类？
+
+> 继承object的类，以及它的子类都叫 新式类
+
+什么是经典类？
+
+> 没有继承object的类，以及它的子类都称之为经典类
+
+
+```
+# 经典类:没有继承object的类，以及它的子类都称之为经典类
+# py2
+class Foo:
+    pass
+
+class Bar(Foo):
+    pass
+
+# py2  继承object的类，以及它的子类都叫 新式类
+class Foo(object):
+    pass
+class Bar(Foo):
+    pass
+
+# py3中  统一是新式类 (默认继承object)
+class Foo:
+    pass
+```
+
+### 属性查找之——MRO列表
+
+属性查找方式有
+
+- 深度优先
+- 广度优先
+
+```
+当类是经典类时：在要查找的属性不存在时，会按照深度优先的方式查找下去
+
+当类是新式类时：在要查找的属性不存在时，会按照广度优先的方式查找下去
+```
+
+```
+class A(object):
+    def test(self):
+        print('from A')
+
+class B(A):
+    def test(self):
+        print('from B')
+
+class C(A):
+    def test(self):
+        print('from C')
+
+class D(B):
+    def test(self):
+        print('from D')
+
+class E(C):
+    def test(self):
+        print('from E')
+
+class F(D,E):
+    # def test(self):
+    #     print('from F')
+    pass
+f1=F()
+f1.test()
+print(F.__mro__) #只有新式才有这个属性可以查看线性列表，经典类没有这个属性
+
+#新式类继承顺序:F->D->B->E->C->A
+#经典类继承顺序:F->D->B->A->E->C
+#python3中统一都是新式类
+#pyhon2中才分新式类与经典类
+```
+
+> #### 新式类的内置mro方法(广度优先)
+
+```
+F.mro() # 查看属性查找的顺序
+```
+
+> #### 经典类没有提供属性深度优先的查找方法
+
 
