--- a/source/_posts/Py004-01-02查看进程编号pid.md
+++ b/source/_posts/Py004-01-02查看进程编号pid.md
@@ -31,3 +31,18 @@ if __name__ == '__main__':
     print('主进程。。。。3   %s' % os.getpid())
 
 ```
+
+查看运行的pycharm进程
+
+> if windows
+
+```
+打开cmd
+tasklist | findstr pycharm
+```
+
+> if mac
+
+```
+ps aus|grep pycharm
+```
