gil全局解释器锁

--- a/source/_posts/Py004-01-12守护线程.md
+++ b/source/_posts/Py004-01-12守护线程.md
@@ -75,4 +75,12 @@ if __name__ == '__main__':
     t1.start()
     t2.start()
     print("main-------")
+
+'''
+123
+456
+main-------
+end123 (守护线程虽然要等主线程结束才陪葬 ，但是此守护线程已经执行结束——死了)
+end456 (主线程要等待其他非守护线程结束而结束)
+'''
 ```
