--- a/source/_posts/Py006-01-13单表操作生成模型.md
+++ b/source/_posts/Py006-01-13单表操作生成模型.md
@@ -193,7 +193,7 @@ DATABASES = {
         'USER':'root',　　　　　　  # 连接数据库的用户名
         'PASSWORD':'',　　　　　　  # 连接数据库的密码
         'HOST':'127.0.0.1',       # 连接主机，默认本级
-        'PORT'：3306    　　　     #  端口 默认3306
+        'PORT':3306    　　　     #  端口 默认3306
     }
 }
 ```
