--- a/source/_posts/Py008-01-04排序.md
+++ b/source/_posts/Py008-01-04排序.md
@@ -34,7 +34,7 @@ tags: M08
 - 计数
 - 基数
 
-#### 冒泡排序 (Bubble sort)
+#### 冒泡排序 (Bubble sort) 体育委员两两比较法
 
 - 列表每两个相邻的数，如果后面的比前面的大，则交换这两个数
 - 一趟排序完成后，则无序区减少一个数，有序区增加一个数
