--- a/source/_posts/Py008-01-06快速排序.md
+++ b/source/_posts/Py008-01-06快速排序.md
@@ -8,6 +8,41 @@ tags: M08
 
 > 第一个实现方式
 
+非原地排序，非常费空间
+
+```
+import math
+# 非原地排序  每次都把列表分为左右两个区间
+def quickSort(arr):
+    if len(arr) <= 1: return arr
+
+    # 取中间位
+    pivotIndex = math.ceil(len(arr) / 2);
+    pivot = arr[pivotIndex];
+    del arr[pivotIndex];
+
+    # 左右区间，用于存放排序后的数
+    left = [];
+    right = [];
+    for i in range(len(arr)):
+        print('分区操作的第 ' + str(i + 1) + ' 次循环：');
+        # 小于基准，放于左区间，大于基准，放于右区间
+        if arr[i] < pivot:
+            left.append(arr[i]);
+            print('左边：' + str(arr[i]))
+        else:
+            right.append(arr[i]);
+            print('右边：' + str(arr[i]))
+    print(left, right)
+    return quickSort(left) + [pivot] + quickSort(right)
+
+
+arr = [14, 3, 15, 7, 2, 76, 11];
+print(quickSort(arr));
+```
+
+> 原地排序
+
 - 以第一个值为起点 li[0] 
 - 从右开始找 li[len(li)-1] 比 li[0] 小则交换，索引往左移动一位。
 - 然后从左往右找 比li[0]大 则交换，索引往右移动一位
