--- a/source/_posts/Py008-10-02nginx安装.md
+++ b/source/_posts/Py008-10-02nginx安装.md
@@ -150,7 +150,7 @@ CHANGES  conf        contrib    LICENSE  README
 # 安装 cc编译器 gcc
 # 后期nginx url重写的包 pcre-devel 
 # 解压缩的包 zlib zlib-devel
-yum -y  gcc pcre-devel zlib zlib-devel
+yum -y install  gcc pcre-devel zlib zlib-devel
 
 # 再次执行 configure命令 ，如果没有error安装成功 有error 一定要解决 不然后患无穷
 ./configure --prefix=/usr/local/nginx
