--- a/source/_posts/Py008-11-01部署实例.md
+++ b/source/_posts/Py008-11-01部署实例.md
@@ -169,4 +169,20 @@ Please submit a full bug report,
 
 解决方案 https://blog.csdn.net/razertang/article/details/45694567/
 
+
+make install
+```
+
+> #### 源码安装特容易失败
+
+```
+# yum 安装
+https://blog.csdn.net/z13615480737/article/details/78906598
+
+
+# 修改密码
+mysql_secure_installation
+
+# 登录数据库
+mysql -uroot -p 
 ```
