update:ts学习002 脚步工具编写

--- a/source/_posts/TS入门001安装与调试.md
+++ b/source/_posts/TS入门001安装与调试.md
@@ -469,3 +469,5 @@ let b = {gender:Gender.Female};
 
 console.log(merry( a , b ));
 ```
+
+- 代码库[https://github.com/slTrust/ts-study](https://github.com/slTrust/ts-study)
